@startuml

title __READONLYINPUTTEXT's Class Diagram__\n

  namespace com.woonders.lacemsjsf.ui {
    namespace component.readonlyinputtext {
      class com.woonders.lacemsjsf.ui.component.readonlyinputtext.ReadOnlyInputText {
          {static} + COMPONENT_FAMILY : String
          {static} + COMPONENT_TYPE : String
          + ReadOnlyInputText()
          + getFamily()
          + getRendererType()
      }
    }
  }
  

  namespace com.woonders.lacemsjsf.ui {
    namespace component.readonlyinputtext {
      class com.woonders.lacemsjsf.ui.component.readonlyinputtext.ReadOnlyInputTextRenderer {
          {static} + RENDERER_TYPE : String
      }
    }
  }
  

  com.woonders.lacemsjsf.ui.component.readonlyinputtext.ReadOnlyInputText -up-|> org.primefaces.component.inputtext.InputText
  com.woonders.lacemsjsf.ui.component.readonlyinputtext.ReadOnlyInputTextRenderer -up-|> org.primefaces.component.inputtext.InputTextRenderer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
